trunk/Archive2/93/53c80ceacbf644/output
main.cpp: In function 'int main()':
main.cpp:3:21: error: use of deleted function 'main()::<lambda()>::<lambda>()'
   decltype(lambda1) lambda2;
                     ^
main.cpp:2:19: note: a lambda closure type has a deleted default constructor
   auto lambda1 = []() mutable {};
                   ^
